# neuraphage

./: .otto.yml  Cargo.toml  LICENSE  README.md  neuraphage.yml
art/: neuraphage-logo.txt
docs/: architectural-evaluation.md  bubblewrap-sandboxing-design.md  claude-code-parity-design.md  cost-limiting-enforcement-design.md  crash-recovery-testing-design.md  daemon-cli-refactor-design.md  engram-events-design.md  engram-integration-completion-design.md  event-logging-design.md  git-worktree-integration-design.md  neuraphage-agentic-loop.md  neuraphage-completion-design.md  neuraphage-design.md  neuraphage-infrastructure.md  neuraphage-personas.md  parallel-workstream-tui-design.md  proactive-rebase-design.md  repl-display-design.md  streaming-design.md  streaming-fix-design.md  tokio-daemonization-research.md  tui-subcommand-design.md  watcher-syncer-integration-design.md
docs/yegge/: the-future-of-coding-agents.md  welcome-to-gas-town.md
examples/: 01_basic_task_management.sh  02_task_dependencies.sh  03_priority_management.sh  04_task_manager_api.rs  05_scheduler_api.rs  06_event_bus.rs  07_knowledge_store.rs  08_lock_manager.rs  09_personas.rs  10_watcher.rs  11_syncer.rs
src/: cli.rs  config.rs  cost.rs  daemon.rs  error.rs  executor.rs  git.rs  lib.rs  main.rs  notifications.rs  recovery.rs  repl.rs  repl_display.rs  safety.rs  sandbox.rs  supervised.rs  task.rs  task_manager.rs  tasks.rs
src/agentic/: anthropic.rs  conversation.rs  llm.rs  mod.rs  prompt.rs  tools.rs
src/agentic/tools/: bash.rs  control.rs  edit.rs  filesystem.rs  grep.rs  mod.rs  search.rs  task.rs  todo.rs  user.rs  web.rs
src/coordination/: event_bus.rs  events.rs  knowledge.rs  lock_manager.rs  mod.rs  scheduler.rs
src/personas/: mod.rs  persona.rs  syncer.rs  watcher.rs
src/repl/: display.rs  mod.rs
src/tui/: mod.rs  multi.rs  runner.rs  single.rs
src/ui/: mod.rs  parallel_tui.rs  tui.rs
tests/: chaos.rs  cost_tracker.rs  multi_workstream.rs
