[package]
name = "neuraphage"
version = "0.1.43"
edition = "2024"
authors = ["Scott Aidler"]
build = "build.rs"
description = "Multi-task AI orchestrator daemon with crash-recoverable architecture"

[[bin]]
name = "np"
path = "src/main.rs"

[dependencies]
# Task graph persistence
engram = { path = "../engram" }

# CLI and config
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling and logging
eyre = "0.6"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

# System
libc = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Terminal
colored = "3"
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"

# ID generation
uuid = { version = "1", features = ["v7", "serde"] }
fork = "0.6.0"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
futures = "0.3"
ctrlc = "3.5.1"

# Tools
globwalk = "0.9"
ignore = "0.4"
regex = "1"

[build-dependencies]

[dev-dependencies]
tempfile = "3"
